chap6/DexToSource/src/com/riis/decompiler/DexToSourceWordpressParser.java
// $ANTLR 3.4 src/com/riis/decompiler/DexToSourceWordpress.g 2012-09-20 16:27:39

	package com.riis.decompiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class DexToSourceWordpressParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANYCHAR", "COMMENT", "CONST_STRING", "HEX_DIGIT", "IDENT", "IF_NEZ", "INIT", "INVOKE_DIRECT", "INVOKE_SUPER", "INVOKE_VIRTUAL", "LIMIT", "LINE", "METHODEND", "METHODSTRT", "NEW_INSTANCE", "REGISTERS", "RETURN_VOID", "SGET", "SOURCE", "SUPER", "THROW", "THROWS", "WS", "'\"'", "'('", "')'", "','", "'.'", "'/'", "':'", "';'", "'L'", "'V'", "']'", "'goto'", "'l'", "'parameter['", "'public'", "'static'", "'this:'", "'v'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int ANYCHAR=4;
    public static final int COMMENT=5;
    public static final int CONST_STRING=6;
    public static final int HEX_DIGIT=7;
    public static final int IDENT=8;
    public static final int IF_NEZ=9;
    public static final int INIT=10;
    public static final int INVOKE_DIRECT=11;
    public static final int INVOKE_SUPER=12;
    public static final int INVOKE_VIRTUAL=13;
    public static final int LIMIT=14;
    public static final int LINE=15;
    public static final int METHODEND=16;
    public static final int METHODSTRT=17;
    public static final int NEW_INSTANCE=18;
    public static final int REGISTERS=19;
    public static final int RETURN_VOID=20;
    public static final int SGET=21;
    public static final int SOURCE=22;
    public static final int SUPER=23;
    public static final int THROW=24;
    public static final int THROWS=25;
    public static final int WS=26;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DexToSourceWordpressParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DexToSourceWordpressParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return DexToSourceWordpressParser.tokenNames; }
    public String getGrammarFileName() { return "src/com/riis/decompiler/DexToSourceWordpress.g"; }


    	JavaOutput fout = DexToSource.fout;



    // $ANTLR start "rule"
    // src/com/riis/decompiler/DexToSourceWordpress.g:19:1: rule : method ;
    public final void rule() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:22:2: ( method )
            // src/com/riis/decompiler/DexToSourceWordpress.g:22:4: method
            {
            pushFollow(FOLLOW_method_in_rule54);
            method();

            state._fsp--;


            }

            fout.close();
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "rule"



    // $ANTLR start "method"
    // src/com/riis/decompiler/DexToSourceWordpress.g:25:1: method : method_start ( scrap )* ( if_stmt ( scrap )* )+ method_end ;
    public final void method() throws RecognitionException {
        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:26:2: ( method_start ( scrap )* ( if_stmt ( scrap )* )+ method_end )
            // src/com/riis/decompiler/DexToSourceWordpress.g:26:4: method_start ( scrap )* ( if_stmt ( scrap )* )+ method_end
            {
            pushFollow(FOLLOW_method_start_in_method66);
            method_start();

            state._fsp--;


            // src/com/riis/decompiler/DexToSourceWordpress.g:26:17: ( scrap )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= LIMIT && LA1_0 <= LINE)||LA1_0==THROWS||LA1_0==34||LA1_0==39) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceWordpress.g:26:17: scrap
            	    {
            	    pushFollow(FOLLOW_scrap_in_method68);
            	    scrap();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // src/com/riis/decompiler/DexToSourceWordpress.g:26:24: ( if_stmt ( scrap )* )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IF_NEZ) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceWordpress.g:26:25: if_stmt ( scrap )*
            	    {
            	    pushFollow(FOLLOW_if_stmt_in_method72);
            	    if_stmt();

            	    state._fsp--;


            	    // src/com/riis/decompiler/DexToSourceWordpress.g:26:33: ( scrap )*
            	    loop2:
            	    do {
            	        int alt2=2;
            	        int LA2_0 = input.LA(1);

            	        if ( ((LA2_0 >= LIMIT && LA2_0 <= LINE)||LA2_0==THROWS||LA2_0==34||LA2_0==39) ) {
            	            alt2=1;
            	        }


            	        switch (alt2) {
            	    	case 1 :
            	    	    // src/com/riis/decompiler/DexToSourceWordpress.g:26:33: scrap
            	    	    {
            	    	    pushFollow(FOLLOW_scrap_in_method74);
            	    	    scrap();

            	    	    state._fsp--;


            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop2;
            	        }
            	    } while (true);


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            pushFollow(FOLLOW_method_end_in_method79);
            method_end();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "method"



    // $ANTLR start "method_start"
    // src/com/riis/decompiler/DexToSourceWordpress.g:29:1: method_start : METHODSTRT f1= flags id1= IDENT p1= params r1= return_ ;
    public final void method_start() throws RecognitionException {
        Token id1=null;
        DexToSourceWordpressParser.flags_return f1 =null;

        String p1 =null;

        String r1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:30:2: ( METHODSTRT f1= flags id1= IDENT p1= params r1= return_ )
            // src/com/riis/decompiler/DexToSourceWordpress.g:30:4: METHODSTRT f1= flags id1= IDENT p1= params r1= return_
            {
            match(input,METHODSTRT,FOLLOW_METHODSTRT_in_method_start91); 

            pushFollow(FOLLOW_flags_in_method_start95);
            f1=flags();

            state._fsp--;


            id1=(Token)match(input,IDENT,FOLLOW_IDENT_in_method_start99); 

            pushFollow(FOLLOW_params_in_method_start103);
            p1=params();

            state._fsp--;


            pushFollow(FOLLOW_return__in_method_start107);
            r1=return_();

            state._fsp--;


            fout.print((f1!=null?input.toString(f1.start,f1.stop):null) + " " + r1 + " " + (id1!=null?id1.getText():null) + "(");
            		
            		String[] args = p1.split(";");
            		for(int i = 0; i < args.length; i++) {
            			fout.print(args[i] + " " + args[i].substring(args[i].lastIndexOf('.')+1, args[i].length()).toLowerCase());
            			if(i != args.length-1) { fout.print(", "); }
            		}
            		
            		fout.printJava(") {");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "method_start"


    public static class flags_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "flags"
    // src/com/riis/decompiler/DexToSourceWordpress.g:42:1: flags : ( flag )+ ;
    public final DexToSourceWordpressParser.flags_return flags() throws RecognitionException {
        DexToSourceWordpressParser.flags_return retval = new DexToSourceWordpressParser.flags_return();
        retval.start = input.LT(1);


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:43:2: ( ( flag )+ )
            // src/com/riis/decompiler/DexToSourceWordpress.g:43:4: ( flag )+
            {
            // src/com/riis/decompiler/DexToSourceWordpress.g:43:4: ( flag )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0 >= 41 && LA4_0 <= 42)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceWordpress.g:43:4: flag
            	    {
            	    pushFollow(FOLLOW_flag_in_flags123);
            	    flag();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "flags"



    // $ANTLR start "flag"
    // src/com/riis/decompiler/DexToSourceWordpress.g:46:1: flag returns [String flag_result] : (f1= 'public' |f1= 'static' );
    public final String flag() throws RecognitionException {
        String flag_result = null;


        Token f1=null;

        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:47:2: (f1= 'public' |f1= 'static' )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==41) ) {
                alt5=1;
            }
            else if ( (LA5_0==42) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:47:4: f1= 'public'
                    {
                    f1=(Token)match(input,41,FOLLOW_41_in_flag142); 

                    flag_result += (f1!=null?f1.getText():null);

                    }
                    break;
                case 2 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:49:4: f1= 'static'
                    {
                    f1=(Token)match(input,42,FOLLOW_42_in_flag153); 

                    flag_result += (f1!=null?f1.getText():null);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return flag_result;
    }
    // $ANTLR end "flag"



    // $ANTLR start "params"
    // src/com/riis/decompiler/DexToSourceWordpress.g:53:1: params returns [String result] : '(' (id1= package_ )* ')' ;
    public final String params() throws RecognitionException {
        String result = null;


        String id1 =null;


        result = "";
        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:55:2: ( '(' (id1= package_ )* ')' )
            // src/com/riis/decompiler/DexToSourceWordpress.g:55:4: '(' (id1= package_ )* ')'
            {
            match(input,28,FOLLOW_28_in_params179); 

            // src/com/riis/decompiler/DexToSourceWordpress.g:55:8: (id1= package_ )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==IDENT||LA6_0==35) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceWordpress.g:55:9: id1= package_
            	    {
            	    pushFollow(FOLLOW_package__in_params184);
            	    id1=package_();

            	    state._fsp--;


            	    result += id1;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,29,FOLLOW_29_in_params190); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "params"



    // $ANTLR start "package_"
    // src/com/riis/decompiler/DexToSourceWordpress.g:58:1: package_ returns [String result] : id1= package_internal ;
    public final String package_() throws RecognitionException {
        String result = null;


        DexToSourceWordpressParser.package_internal_return id1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:59:2: (id1= package_internal )
            // src/com/riis/decompiler/DexToSourceWordpress.g:59:4: id1= package_internal
            {
            pushFollow(FOLLOW_package_internal_in_package_208);
            id1=package_internal();

            state._fsp--;


            result = (id1!=null?input.toString(id1.start,id1.stop):null).replace("/", ".");
            		 if(result.startsWith("L")) { 
            		 	result = result.substring(1, result.length());
            		 }
            		

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "package_"


    public static class package_internal_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "package_internal"
    // src/com/riis/decompiler/DexToSourceWordpress.g:67:1: package_internal : ( 'L' )? IDENT ( ( '/' | '.' ) ( IDENT | HEX_DIGIT )+ )* ( '/' '<init>' )? ( ';' )? ;
    public final DexToSourceWordpressParser.package_internal_return package_internal() throws RecognitionException {
        DexToSourceWordpressParser.package_internal_return retval = new DexToSourceWordpressParser.package_internal_return();
        retval.start = input.LT(1);


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:68:2: ( ( 'L' )? IDENT ( ( '/' | '.' ) ( IDENT | HEX_DIGIT )+ )* ( '/' '<init>' )? ( ';' )? )
            // src/com/riis/decompiler/DexToSourceWordpress.g:68:4: ( 'L' )? IDENT ( ( '/' | '.' ) ( IDENT | HEX_DIGIT )+ )* ( '/' '<init>' )? ( ';' )?
            {
            // src/com/riis/decompiler/DexToSourceWordpress.g:68:4: ( 'L' )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==35) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:68:4: 'L'
                    {
                    match(input,35,FOLLOW_35_in_package_internal224); 

                    }
                    break;

            }


            match(input,IDENT,FOLLOW_IDENT_in_package_internal227); 

            // src/com/riis/decompiler/DexToSourceWordpress.g:68:15: ( ( '/' | '.' ) ( IDENT | HEX_DIGIT )+ )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==32) ) {
                    int LA9_1 = input.LA(2);

                    if ( ((LA9_1 >= HEX_DIGIT && LA9_1 <= IDENT)) ) {
                        alt9=1;
                    }


                }
                else if ( (LA9_0==31) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // src/com/riis/decompiler/DexToSourceWordpress.g:68:16: ( '/' | '.' ) ( IDENT | HEX_DIGIT )+
            	    {
            	    if ( (input.LA(1) >= 31 && input.LA(1) <= 32) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    // src/com/riis/decompiler/DexToSourceWordpress.g:68:26: ( IDENT | HEX_DIGIT )+
            	    int cnt8=0;
            	    loop8:
            	    do {
            	        int alt8=2;
            	        int LA8_0 = input.LA(1);

            	        if ( ((LA8_0 >= HEX_DIGIT && LA8_0 <= IDENT)) ) {
            	            alt8=1;
            	        }


            	        switch (alt8) {
            	    	case 1 :
            	    	    // src/com/riis/decompiler/DexToSourceWordpress.g:
            	    	    {
            	    	    if ( (input.LA(1) >= HEX_DIGIT && input.LA(1) <= IDENT) ) {
            	    	        input.consume();
            	    	        state.errorRecovery=false;
            	    	    }
            	    	    else {
            	    	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	    	        throw mse;
            	    	    }


            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt8 >= 1 ) break loop8;
            	                EarlyExitException eee =
            	                    new EarlyExitException(8, input);
            	                throw eee;
            	        }
            	        cnt8++;
            	    } while (true);


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            // src/com/riis/decompiler/DexToSourceWordpress.g:68:47: ( '/' '<init>' )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==32) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:68:48: '/' '<init>'
                    {
                    match(input,32,FOLLOW_32_in_package_internal246); 

                    match(input,INIT,FOLLOW_INIT_in_package_internal248); 

                    }
                    break;

            }


            // src/com/riis/decompiler/DexToSourceWordpress.g:68:63: ( ';' )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==34) ) {
                int LA11_1 = input.LA(2);

                if ( (LA11_1==IDENT) ) {
                    int LA11_3 = input.LA(3);

                    if ( (LA11_3==IDENT||LA11_3==29||(LA11_3 >= 31 && LA11_3 <= 32)||(LA11_3 >= 34 && LA11_3 <= 35)) ) {
                        alt11=1;
                    }
                }
                else if ( (LA11_1==CONST_STRING||LA11_1==IF_NEZ||(LA11_1 >= INVOKE_VIRTUAL && LA11_1 <= METHODEND)||LA11_1==NEW_INSTANCE||(LA11_1 >= RETURN_VOID && LA11_1 <= SGET)||(LA11_1 >= THROW && LA11_1 <= THROWS)||LA11_1==29||(LA11_1 >= 34 && LA11_1 <= 35)||LA11_1==39) ) {
                    alt11=1;
                }
            }
            switch (alt11) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:68:63: ';'
                    {
                    match(input,34,FOLLOW_34_in_package_internal252); 

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "package_internal"



    // $ANTLR start "return_"
    // src/com/riis/decompiler/DexToSourceWordpress.g:71:1: return_ returns [String result] : 'V' ;
    public final String return_() throws RecognitionException {
        String result = null;


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:72:2: ( 'V' )
            // src/com/riis/decompiler/DexToSourceWordpress.g:72:4: 'V'
            {
            match(input,36,FOLLOW_36_in_return_269); 

            result = "void";

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "return_"



    // $ANTLR start "if_stmt"
    // src/com/riis/decompiler/DexToSourceWordpress.g:75:1: if_stmt : ( if_ ( scrap )* id1= new_instance id2= const_string invoke_direct ( scrap )* throw_ | if_ ( scrap )* RETURN_VOID ( scrap )* goto_stmt );
    public final void if_stmt() throws RecognitionException {
        String id1 =null;

        String id2 =null;


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:76:2: ( if_ ( scrap )* id1= new_instance id2= const_string invoke_direct ( scrap )* throw_ | if_ ( scrap )* RETURN_VOID ( scrap )* goto_stmt )
            int alt16=2;
            alt16 = dfa16.predict(input);
            switch (alt16) {
                case 1 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:76:4: if_ ( scrap )* id1= new_instance id2= const_string invoke_direct ( scrap )* throw_
                    {
                    pushFollow(FOLLOW_if__in_if_stmt283);
                    if_();

                    state._fsp--;


                    // src/com/riis/decompiler/DexToSourceWordpress.g:76:8: ( scrap )*
                    loop12:
                    do {
                        int alt12=2;
                        int LA12_0 = input.LA(1);

                        if ( ((LA12_0 >= LIMIT && LA12_0 <= LINE)||LA12_0==THROWS||LA12_0==34||LA12_0==39) ) {
                            alt12=1;
                        }


                        switch (alt12) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceWordpress.g:76:8: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_if_stmt285);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop12;
                        }
                    } while (true);


                    pushFollow(FOLLOW_new_instance_in_if_stmt290);
                    id1=new_instance();

                    state._fsp--;


                    pushFollow(FOLLOW_const_string_in_if_stmt294);
                    id2=const_string();

                    state._fsp--;


                    pushFollow(FOLLOW_invoke_direct_in_if_stmt296);
                    invoke_direct();

                    state._fsp--;


                    // src/com/riis/decompiler/DexToSourceWordpress.g:76:63: ( scrap )*
                    loop13:
                    do {
                        int alt13=2;
                        int LA13_0 = input.LA(1);

                        if ( ((LA13_0 >= LIMIT && LA13_0 <= LINE)||LA13_0==THROWS||LA13_0==34||LA13_0==39) ) {
                            alt13=1;
                        }


                        switch (alt13) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceWordpress.g:76:63: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_if_stmt298);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop13;
                        }
                    } while (true);


                    pushFollow(FOLLOW_throw__in_if_stmt301);
                    throw_();

                    state._fsp--;


                    fout.printJava("throw new " + id1 + "(" + id2 + ");\n}");

                    }
                    break;
                case 2 :
                    // src/com/riis/decompiler/DexToSourceWordpress.g:78:4: if_ ( scrap )* RETURN_VOID ( scrap )* goto_stmt
                    {
                    pushFollow(FOLLOW_if__in_if_stmt310);
                    if_();

                    state._fsp--;


                    // src/com/riis/decompiler/DexToSourceWordpress.g:78:8: ( scrap )*
                    loop14:
                    do {
                        int alt14=2;
                        int LA14_0 = input.LA(1);

                        if ( ((LA14_0 >= LIMIT && LA14_0 <= LINE)||LA14_0==THROWS||LA14_0==34||LA14_0==39) ) {
                            alt14=1;
                        }


                        switch (alt14) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceWordpress.g:78:8: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_if_stmt312);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop14;
                        }
                    } while (true);


                    match(input,RETURN_VOID,FOLLOW_RETURN_VOID_in_if_stmt315); 

                    // src/com/riis/decompiler/DexToSourceWordpress.g:78:27: ( scrap )*
                    loop15:
                    do {
                        int alt15=2;
                        int LA15_0 = input.LA(1);

                        if ( ((LA15_0 >= LIMIT && LA15_0 <= LINE)||LA15_0==THROWS||LA15_0==34||LA15_0==39) ) {
                            alt15=1;
                        }


                        switch (alt15) {
                    	case 1 :
                    	    // src/com/riis/decompiler/DexToSourceWordpress.g:78:27: scrap
                    	    {
                    	    pushFollow(FOLLOW_scrap_in_if_stmt317);
                    	    scrap();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop15;
                        }
                    } while (true);


                    fout.printJava("return;\n}");

                    pushFollow(FOLLOW_goto_stmt_in_if_stmt322);
                    goto_stmt();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "if_stmt"



    // $ANTLR start "if_"
    // src/com/riis/decompiler/DexToSourceWordpress.g:81:1: if_ : IF_NEZ id1= reg ',' 'l' HEX_DIGIT ;
    public final void if_() throws RecognitionException {
        DexToSourceWordpressParser.reg_return id1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:82:2: ( IF_NEZ id1= reg ',' 'l' HEX_DIGIT )
            // src/com/riis/decompiler/DexToSourceWordpress.g:82:4: IF_NEZ id1= reg ',' 'l' HEX_DIGIT
            {
            match(input,IF_NEZ,FOLLOW_IF_NEZ_in_if_333); 

            pushFollow(FOLLOW_reg_in_if_337);
            id1=reg();

            state._fsp--;


            match(input,30,FOLLOW_30_in_if_339); 

            match(input,39,FOLLOW_39_in_if_341); 

            match(input,HEX_DIGIT,FOLLOW_HEX_DIGIT_in_if_343); 

            fout.print("if(");
            		 if((id1!=null?input.toString(id1.start,id1.stop):null).equals("v2")) {
            		 	fout.printJava("writer == null ) {");
            		 } else {
            		 	fout.printJava("string == null ) {");
            		 }
            		

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "if_"


    public static class reg_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "reg"
    // src/com/riis/decompiler/DexToSourceWordpress.g:92:1: reg : 'v' HEX_DIGIT ;
    public final DexToSourceWordpressParser.reg_return reg() throws RecognitionException {
        DexToSourceWordpressParser.reg_return retval = new DexToSourceWordpressParser.reg_return();
        retval.start = input.LT(1);


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:93:2: ( 'v' HEX_DIGIT )
            // src/com/riis/decompiler/DexToSourceWordpress.g:93:4: 'v' HEX_DIGIT
            {
            match(input,44,FOLLOW_44_in_reg359); 

            match(input,HEX_DIGIT,FOLLOW_HEX_DIGIT_in_reg361); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "reg"



    // $ANTLR start "new_instance"
    // src/com/riis/decompiler/DexToSourceWordpress.g:96:1: new_instance returns [String result] : NEW_INSTANCE reg ',' id1= package_ ;
    public final String new_instance() throws RecognitionException {
        String result = null;


        String id1 =null;


        try {
            // src/com/riis/decompiler/DexToSourceWordpress.g:97:2: ( NEW_INSTANCE reg ',' id1= package_ )
            // src/com/riis/decompiler/DexToSourceWordpress.g:97:4: NEW_INSTANCE reg ',' id1= package_
            {
            match(input,NEW_INSTANCE,FOLLOW_NEW_INSTANCE_in_new_instance376); 

            pushFollow(FOLLOW_reg_in_new_instance378);
            reg();

            state._fsp--;


            match(input,30,FOLLOW_30_in_new_instance380); 

            pushFollow(FOLLOW_package__in_new_instance384);
            id1=package_();

            state._fsp--;


            result = id1;
